minor last changes

--- a/MyLittleProjectManager/MyLittleProjectManager/Views/Leaderboard/Index.cshtml
+++ b/MyLittleProjectManager/MyLittleProjectManager/Views/Leaderboard/Index.cshtml
@@ -17,7 +17,7 @@
             Pseudo
         </td>
         <td>Title</td>
-        <td>Points</td>
+        <td>Score</td>
     </tr>
     @{ 
         int rank = 0;
