--- a/MyLittleProjectManager/MyLittleProjectManager/Views/Profile/Index.cshtml
+++ b/MyLittleProjectManager/MyLittleProjectManager/Views/Profile/Index.cshtml
@@ -124,7 +124,12 @@
             <tbody>
                 <tr>
                     <td>Title</td>
-                    <td>@Html.DropDownList("Titles", new SelectList(new SelectListItem[] { new SelectListItem() { Text="" } }), "Select Title", new { @id = "ddTilte" })</td>
+                    
+                        
+
+                <td>@Html.DropDownList("Titles", new SelectList(new SelectListItem[] { new SelectListItem() { Text = "Master" } }), "Noob", new { @id = "ddTilte" })</td>
+                
+                    
                 </tr>
                 <tr>
                     <td>Pseudo</td>
