--- a/MyLittleProjectManager/MyLittleProjectManager/Views/Store/Index.cshtml
+++ b/MyLittleProjectManager/MyLittleProjectManager/Views/Store/Index.cshtml
@@ -114,7 +114,7 @@
             
         </div>
         <div class="col-md-6">
-            <h3>Avatar</h3>
+            <h3>Avatar and items</h3>
             @foreach (var item in Model.StoreItems)
     {
 
